# simurgh

./: .env.example  .gitignore  .prettierrc  .rustfmt.toml  .secrets.env.example  CHANGELOG.md  Cargo.toml  README.md  index.html  main.py  manage  package.json  requirements.txt  tsconfig.json  vite.config.ts  webpack.config.js
.github/workflows/: deploy.yml
api/: __init__.py  admin.py  auth.py  blog.py  project.py  record.py  user.py  verification.py
api/blog/: __init__.py  blog.py  category.py  content.py
app/: icon.tsx  icons.tsx  index.html  index.tsx  models.ts  tsconfig.json  types.ts
app/@types/: modules.d.ts
app/admin/: general.tsx  index.tsx  project.tsx  projects.tsx  users.tsx
app/components/: alert.tsx  background.tsx  hackEffect.tsx  logo.tsx  progress.tsx  typing.tsx
app/comps/: action.tsx  alert.tsx  color-picker.tsx  confact.tsx  copiable.tsx  editable.tsx  fanel.tsx  index.ts  pagination.tsx  popup.tsx  themeSwtich.tsx  timer.tsx  tooltip.tsx  trash.tsx
app/dash/: index.tsx
app/icons/: actions.tsx  dashboard.tsx  editor.tsx
app/layout/: 404.tsx  blog.tsx  blogs.tsx  editor.tsx  login.tsx  project.tsx  projects.tsx  records.tsx  sidebar.tsx
app/pages/: 404.tsx  blog-editor.tsx  blog.tsx  blogs.tsx  categories.tsx  login.tsx  logo.tsx  project.tsx  (+6 more)
config/: alembic.ini  app.ts  backup.sh  deploy.sh  gunicorn.py  nginx.conf  redis.conf  redis_ilia.service  simurgh.backup.service  simurgh.backup.timer  simurgh.service
db/: blog.py  env.py  general.py  project.py  rate_limit.py  record.py  user.py
migrations/: 0001_init.sql
shared/: __init__.py  errors.json  errors.py  letters.json  letters.py  logger.py  models.py  sms.py  tools.py  validators.py
simple/: icons.tsx  index.html  index.tsx  models.ts
src/: config.rs  docs.rs  general.rs  main.rs  utils.rs  vendor.rs  web.rs
(+199 files in other folders)
