[package]
name = "simurgh"
version = "1.0.0"
edition = "2021"

[dependencies]
log = "0.4.22"
lettre = "0.11.9"
cercis = "1.2.0"
rand = "0.8.5"
image = "0.25.2"
webp = "0.3.0"
tempfile = "3.13.0"
hex = "0.4.3"
lazy_static = "1.5.0"
awc = { version =  "3.5.1", features = ["openssl"]}
utoipa = { version = "5.0.0", features = ["actix_extras", "debug"] }
actix-web = "4.9.0"
actix-utils = "3.0.1"
actix-web-httpauth = "0.8.2"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.210"
serde_tuple = "1.0.0"
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
sqlx-cli = { version = "0.8.2", features = ["sqlite", "completions"] }

[dependencies.sqlx]
version = "0.8.2"
features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
]
